--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
 
-	<title>Tutorial Bootstrap</title>
+	<title>Guilherme Martins</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -18,24 +18,24 @@
   	<div class="collapse navbar-collapse" id="main-navigation">
    		<ul class="navbar-nav">
      		<li class="nav-item">
-        		<a class="nav-link" href="#">Home</a>
+        		<a class="nav-link" href="#">Início</a>
       		</li>
       		<li class="nav-item">
-       			 <a class="nav-link" href="#">About</a>
+       			 <a class="nav-link" href="#descricao">Sobre</a>
       		</li>
       		<li class="nav-item">
-        		<a class="nav-link" href="#">Contact</a>
+        		<a class="nav-link" href="#rodape">Contato</a>
      		 </li>
     	</ul>
  	 </div>
 	</nav>
 
-	<header class="page-header header container-fluid">
+	<header id="descricao"class="page-header header container-fluid">
 		<div class="overlay">
 			<div class="description">
-  				<h1>Welcome to the Landing Page!</h1>
-  				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis. Suspendisse consectetur mi id libero fringilla, in pharetra sem ullamcorper.</p>
-  				<button class="btn btn-outline-secondary btn-lg">Tell Me More!</button>
+  				<h1>SITE EM CONSTRUÇÃO!</h1>
+  				<p>Desculpe o incômodo.</p>
+  				<button class="btn btn-outline-secondary btn-lg">Saiba Mais!</button>
 			</div>
 		</div>
 
@@ -44,48 +44,47 @@
 	<div class="container features">
   		<div class="row">
     		<div class="col-lg-4 col-md-4 col-sm-12">
-      			<h3 class="feature-title">Lorem ipsum</h3>
-      			<img src="img/img1.jpg" class="img-fluid">
-      			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis.</p>
+      			<h3 class="feature-title">Imagem 1</h3>
+      			<img src="img/img4.png" class="img-fluid">
+      			<p>Texto</p>
     		</div>
     		<div class="col-lg-4 col-md-4 col-sm-12">
-      			<h3 class="feature-title">Lorem ipsum</h3>
-      			<img src="img/img2.jfif" class="img-fluid">
-      			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis.</p>
+      			<h3 class="feature-title">Imagem 2</h3>
+      			<img src="img/img4.png" class="img-fluid">
+      			<p>Texto</p>
     		</div>
     		<div class="col-lg-4 col-md-4 col-sm-12">  
-    			<h3 class="feature-title">Get in Touch!</h3>
+    			<h3 class="feature-title">Entre em Contato!</h3>
 				<div class="form-group">
-  					<input type="text" class="form-control" placeholder="Name" name="">
+  					<input type="text" class="form-control" placeholder="Nome" name="">
 				</div>
 				<div class="form-group">
-  					<input type="email" class="form-control" placeholder="Email Address" name="email">
+  					<input type="email" class="form-control" placeholder="E-mail" name="email">
 				</div>
 				<div class="form-group">
   					<textarea class="form-control" rows="4"></textarea>
 				</div>
-					<input type="submit" class="btn btn-secondary btn-block" value="Send" name="">      
+					<input type="submit" class="btn btn-secondary btn-block" value="Enviar" name="">      
     		</div>
   		</div> 
 	</div>
 
-	<footer class="page-footer">
+	<footer class="page-footer" id="rodape">
   		<div class="container">
     		<div class="row">
       			<div class="col-lg-8 col-md-8 col-sm-12">
-      				<h6 class="text-uppercase font-weight-bold">Additional Information</h6>
+      				<h6 class="text-uppercase font-weight-bold">Informação Adicional</h6>
       				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis.</p>
       				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis.</p>
    				</div>
     			<div class="col-lg-4 col-md-4 col-sm-12">
-      				<h6 class="text-uppercase font-weight-bold">Contact</h6>
-      				<p>1640 Riverside Drive, Hill Valley, California
-      				<br/>info@mywebsite.com
-      				<br/>+ 01 234 567 88
-      				<br/>+ 01 234 567 89</p>
+      				<h6 class="text-uppercase font-weight-bold">Contato</h6>
+      				<a href="https://www.facebook.com/guilherme.vieira.7568" target="_blank">Facebook</a>
+      				<br/>Telefone: (14)98107-1505
+      				<p>Balsas-MA</p>
     			</div>
   			</div>
-  		<div class="footer-copyright text-center">© 2020 Copyright: MyWebsite.com</div>
+  		<div class="footer-copyright text-center">© 2020 Copyright</div>
 	</footer>
 
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
