--- a/index.html
+++ b/index.html
@@ -35,7 +35,23 @@
 			<div class="description">
   				<h1>SITE EM CONSTRUÇÃO!</h1>
   				<p>Desculpe o incômodo.</p>
-  				<button class="btn btn-outline-secondary btn-lg">Saiba Mais!</button>
+  				<button id="myBtn" class="btn btn-outline-secondary btn-lg">Saiba Mais!</button>
+				
+				<div id="myModal" class="modal">
+					<div class="modal-content">
+    					<div class="modal-header">
+      						<span class="close">&times;</span>
+      						<h2>Modal Header</h2>
+    					</div>
+    					<div class="modal-body">
+      						<p>Some text in the Modal Body</p>
+      						<p>Some other text...</p>
+    					</div>
+    						<div class="modal-footer">
+      							<h3>Modal Footer</h3>
+    						</div>
+  						</div>
+				</div>
 			</div>
 		</div>
 
