--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
       						<h2>Modal Header</h2>
     					</div>
     					<div class="modal-body">
-      						<p>Some text in the Modal Body</p>
-      						<p>Some other text...</p>
+      						<p>TEXTO texto TEXTO texto</p>
+      						<p>TEXTO texto TEXTO texto</p>
     					</div>
     						<div class="modal-footer">
-      							<h3>Modal Footer</h3>
+      							<!-- <h3>Modal Footer</h3> -->
     						</div>
   						</div>
 				</div>
@@ -65,9 +65,9 @@
       			<p>Texto</p>
     		</div>
     		<div class="col-lg-4 col-md-4 col-sm-12">
-      			<h3 class="feature-title">Imagem 2</h3>
-      			<img src="img/img4.png" class="img-fluid">
-      			<p>Texto</p>
+      			<h3 class="feature-title">Localização</h3>
+      			<!-- <img src="img/img4.png" class="img-fluid"> -->
+      			<iframe id="maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3955.535244247638!2d-46.033443184619735!3d-7.516444076250097!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x92d5ef0ec8285553%3A0x843ff944e61da5b6!2sR.%20Renato%20Russo%2C%2025%20-%20Cjr%20Planalto%2C%20Balsas%20-%20MA%2C%2065800-000!5e0!3m2!1spt-BR!2sbr!4v1596489835316!5m2!1spt-BR!2sbr"  allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
     		</div>
     		<div class="col-lg-4 col-md-4 col-sm-12">  
     			<h3 class="feature-title">Entre em Contato!</h3>
@@ -78,7 +78,7 @@
   					<input type="email" class="form-control" placeholder="E-mail" name="email">
 				</div>
 				<div class="form-group">
-  					<textarea class="form-control" rows="4"></textarea>
+  					<textarea class="form-control" placeholder="Deixe sua mensagem" rows="4"></textarea>
 				</div>
 					<input type="submit" class="btn btn-secondary btn-block" value="Enviar" name="">      
     		</div>
@@ -90,8 +90,8 @@
     		<div class="row">
       			<div class="col-lg-8 col-md-8 col-sm-12">
       				<h6 class="text-uppercase font-weight-bold">Informação Adicional</h6>
-      				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis.</p>
-      				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis.</p>
+      				<p>TEXTO texto TEXTO texto TEXTO texto TEXTO texto TEXTO texto TEXTO texto TEXTO texto TEXTO texto</p>
+      				<p>TEXTO texto TEXTO texto TEXTO texto TEXTO texto TEXTO texto TEXTO Texto TEXTO texto TEXTO texto</p>
    				</div>
     			<div class="col-lg-4 col-md-4 col-sm-12">
       				<h6 class="text-uppercase font-weight-bold">Contato</h6>
